<resources>
    <!--General-->
    <string name="app_name">navNUS</string>
    <string name="accessToken">pk.eyJ1IjoiYmVybmFyZHlpcCIsImEiOiJjaXB6MDg5bnYweWJ1aDJucmptaHNvMjY5In0.mczdsr5CVJq-PUtmSA2RDA</string>

    <!--Splash Screen-->
    <string name="splash_screen_activity_loading_text_1">Loading data files</string>
    <string name="splash_screen_activity_loading_text_2">Walking to NUS</string>
    <string name="splash_screen_activity_loading_text_3">Joining a CCA</string>
    <string name="splash_screen_activity_loading_text_4">Studying for exams</string>
    <string name="splash_screen_activity_loading_text_5">Singing a song</string>

    <!--Menu-->
    <string name="action_settings">Settings</string>
    <string name="ver">Ver 0.3.5</string>
    <string name="menu1">Navigate NUS</string>
    <string name="menu2">Submit Shortcut</string>
    <string name="menu3">Settings</string>
    <string name="menu4">Approve Shortcut</string>

    <!--activity_main-->
    <string name="main_activity_title">Navigate</string>
    <string name="main_activity_textbox_search_tooltip">(From) to (Destination)</string>
    <string name="main_activity_from">(From)</string>
    <string name="main_activity_to">(Destination)</string>
    <string name="main_activity_button_search_text">Search</string>
    <string name="main_activity_debug_text">Debug:</string>
    <string name="title_activity_maps">Navigation</string>
    <string name="main_activity_button_view_map">View Map</string>

    <!--activity_submit_sc-->
    <string name="title_activity_submit_sc">Submit Short Cut</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_temp_menu">TempMenu</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
