<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <TextView
        android:id="@+id/navigatetv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_title"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:textStyle="bold"
        android:textColor="#0062A9"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/navigatetv"
        android:background="#0062A9"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/navigatetv"
        android:layout_marginTop="8dp"
        >
        <AutoCompleteTextView
            android:id="@+id/etFrom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="14sp"
            android:hint="@string/main_activity_from"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#6d6d6d"
            >

            <requestFocus />
        </AutoCompleteTextView >

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="8dp"
        >
        <AutoCompleteTextView
            android:id="@+id/etTo"
            android:hint="@string/main_activity_to"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textSize="14sp"
            android:inputType="text"
            android:textColor="#000000"
            android:textColorHint="#6d6d6d" />

    </LinearLayout>

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:text="@string/main_activity_button_search_text"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="14sp"
        android:onClick="button_search_click" />

    <TextView
        android:id="@+id/textview_debug_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/main_activity_debug_text"
        android:textColor="#000000"
        android:layout_below="@+id/button_search"
        android:layout_marginLeft="16dp"/>

    <TextView
        android:id="@+id/textview_debug_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:textColor="#000000"
        android:layout_below="@+id/textview_debug_label"
        android:layout_marginLeft="16dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_button_view_map"
        android:id="@+id/button_view_map"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:singleLine="false"
        android:enabled="false"
        android:onClick="button_view_map_click" />

    <!-- <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:src="@android:drawable/alert_dark_frame" /> -->

    <!-- <ImageView
        android:id="@+id/imageView2"
        android:contentDescription="@string/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/"
        android:adjustViewBounds="true" /> -->

</RelativeLayout>