<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@android:color/white" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#182636">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/app_name"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </FrameLayout>

    <!--First Row (from L to R)-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="48dp" >

        <Button
            android:id="@+id/navNusBtn"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/navicon" />

        <Button
            android:id="@+id/subSCBtn"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/shortcuticon" />

        <Button
            android:id="@+id/settingsBtn"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp"
            android:background="@drawable/settings" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        android:layout_below="@+id/navNusBtn"
        <TextView
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:gravity="center|center_vertical"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/menu1" />

        <TextView
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center|center_vertical"
            android:text="@string/menu2"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/settingsTV"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="16dp"
            android:gravity="center|center_vertical"
            android:text="@string/menu3"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </RelativeLayout>

    <!--Second Row (from L to R)-->

    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="40dp" >


        <Button
            android:id="@+id/adminAPBtn"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginLeft="16dp"
            android:background="@drawable/adminapproveicon" />

       <!-- <Button
            android:id="@+id/contactUsBtn"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/contact" /> -->

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/adminAPTV"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:gravity="center|center_vertical"
            android:text="@string/menu4"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <!--<TextView
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center|center_vertical"
            android:text="Contact Us"
            android:textColor="@android:color/black"
            android:textStyle="bold" /> -->

    </RelativeLayout>

    <!--Version Number-->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="16dp"
            android:text="@string/ver"
            android:textColor="@android:color/black" />

    </RelativeLayout>

</LinearLayout>